A few more spell check for da.po

--- a/po/da.po
+++ b/po/da.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: icewm 1.4.2.438\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
 "POT-Creation-Date: 2017-09-26 08:39-0600\n"
-"PO-Revision-Date: 2017-09-28 19:00+0200\n"
+"PO-Revision-Date: 2017-09-28 19:48+0200\n"
 "Last-Translator: scootergrisen\n"
 "Language-Team: Danish\n"
 "Language: da\n"
@@ -900,9 +900,9 @@ msgid ""
 " DesktopBackgroundScaled  - Display desktop background scaled\n"
 " DesktopBackgroundColor   - Desktop background color(s)\n"
 " DesktopBackgroundImage   - Desktop background image(s)\n"
-" SupportSemitransparency  - Support for delvist transparent terminals\n"
-" DesktopTransparencyColor - Delvist transparency background color(s)\n"
-" DesktopTransparencyImage - Delvist transparency background image(s)\n"
+" SupportSemitransparency  - Support for semitransparent terminals\n"
+" DesktopTransparencyColor - Semitransparency background color(s)\n"
+" DesktopTransparencyImage - Semitransparency background image(s)\n"
 " DesktopBackgroundMultihead - One background over all monitors\n"
 "\n"
 " center:0 scaled:0 = tiled\n"
@@ -912,7 +912,7 @@ msgid ""
 "\n"
 msgstr ""
 "Anvendelse: icewmbg [TILVALG]\n"
-"Hvor flere værdier kan gives afskilles de med kommaer.\n"
+"Hvor flere værdier kan gives adskilles de med kommaer.\n"
 "Når billede er en mappe bruges alle billeder fra den mappe.\n"
 "\n"
 "Tilvalg:\n"
@@ -945,9 +945,9 @@ msgstr ""
 " DesktopBackgroundScaled  - Vis skrivebordsbaggrund skaleret\n"
 " DesktopBackgroundColor   - Skrivebordets baggrundsfarve(r)\n"
 " DesktopBackgroundImage   - Skrivebordets baggrundsbillede(r)\n"
-" SupportSemitransparency  - Understøttelse af semitransparente terminaler\n"
-" DesktopTransparencyColor - Semitransparente baggrundsfarve(r)\n"
-" DesktopTransparencyImage - Semitransparente baggrundsbillede(r)\n"
+" SupportSemitransparency  - Understøttelse af delvist transparente terminaler\n"
+" DesktopTransparencyColor - Delvist transparente baggrundsfarve(r)\n"
+" DesktopTransparencyImage - Delvist transparente baggrundsbillede(r)\n"
 " DesktopBackgroundMultihead - Én baggrund på alle skærme\n"
 "\n"
 " center:0 scaled:0 = fliselagt\n"
