fix ca.po again

--- a/po/ca.po
+++ b/po/ca.po
@@ -1387,11 +1387,11 @@ msgstr ""
 "Opcions:\n"
 "  --display=NAME      NOM del servidor X per usar.\n"
 "%s  --sync              Sincronitza ordres d'X11.\n"
-"\n"
+"%s\n"
 "  -V, --version       Imprimeix la informació de la versió i surt.\n"
 "  -h, --help          Imprimeix aquesta pantalla d'ajuda i surt.\n"
-"\n"
-"%s  --replace           Reemplaça un gestor de finestres existent.\n"
+"%s\n"
+"  --replace           Reemplaça un gestor de finestres existent.\n"
 "  -r, --restart       Digues a l'icewm en execució que es reiniciï.\n"
 "\n"
 "  --configured        Imprimeix la configuració de l'hora de la compilació.\n"
