--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,11 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.3.4pre2\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2017-10-18 03:14-0600\n"
+"POT-Creation-Date: 2017-10-22 03:55-0600\n"
 "PO-Revision-Date: 2017-10-19 16:34+0000\n"
 "Last-Translator: Luiz Fernando Ranghetti <elchevive68@gmail.com>\n"
-"Language-Team: Portuguese (Brazil) "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/icewm/"
+"icewm-1-4-branch/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -387,11 +387,11 @@ msgstr ""
 "Uso: %s [OPÇÕES] [ ARQUIVO | URL ]\n"
 "\n"
 "IceHelp é um navegador HTML simples para o gerenciador de janelas IceWM.\n"
-"Ele pode exibir um documento HTML a partir de um arquivo, ou navegar um site."
-"\n"
+"Ele pode exibir um documento HTML a partir de um arquivo, ou navegar um "
+"site.\n"
 "Ele lembra as páginas visitadas em um histórico, que é navegável\n"
-"por uma combinação de teclas e um menu de contexto (clique direito do mouse)."
-"\n"
+"por uma combinação de teclas e um menu de contexto (clique direito do "
+"mouse).\n"
 "Ele não suporta nem renderização de imagens nem JavaScript.\n"
 "Se nenhum arquivo ou URL for fornecido ele irá exibir o Manual do IceWM\n"
 "de %s.\n"
@@ -850,8 +850,8 @@ msgstr ""
 "\n"
 "-O, --oss=DISPOSITIVO        Especifica o dispositivo OSS (padrão: \"%s\").\n"
 "\n"
-"-A, --alsa=DISPOSITIVO       Especifica o dispositivo ALSA (padrão: \"%s\")."
-"\n"
+"-A, --alsa=DISPOSITIVO       Especifica o dispositivo ALSA (padrão: \"%s"
+"\").\n"
 "\n"
 "-S, --server=END:PORT         Especifica o endereço e número da porta do "
 "servidor ESD.\n"
@@ -1400,8 +1400,8 @@ msgstr ""
 "\n"
 "Variáveis do ambiente:\n"
 "  ICEWM_PRIVCFG=CAMINHO  Diretório para os arquivos de configuração do\n"
-"                      usuário, \"$XDG_CONFIG_HOME/icewm\" se existir ou \""
-"$HOME/.icewm/\"\n"
+"                      usuário, \"$XDG_CONFIG_HOME/icewm\" se existir ou "
+"\"$HOME/.icewm/\"\n"
 "                      por padrão.  \n"
 "  DISPLAY=NOME        Nome do servidor X a usar.\n"
 "  MAIL=URL            Localização da sua caixa de e-mail.\n"
