--- a/po/da.po
+++ b/po/da.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: icewm 1.4.2.438\n"
+"Project-Id-Version: icewm 1.4.2\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
 "POT-Creation-Date: 2017-10-22 03:55-0600\n"
-"PO-Revision-Date: 2017-09-28 19:48+0200\n"
+"PO-Revision-Date: 2017-10-24 20:00+0200\n"
 "Last-Translator: scootergrisen\n"
 "Language-Team: Danish\n"
 "Language: da\n"
@@ -148,39 +148,39 @@ msgstr "%ld postbeskeder."
 
 #: src/amemstatus.cc:134
 msgid "GB"
-msgstr ""
+msgstr "GB"
 
 #: src/amemstatus.cc:138
 msgid "MB"
-msgstr ""
+msgstr "MB"
 
 #: src/amemstatus.cc:142
 msgid "kB"
-msgstr ""
+msgstr "kB"
 
 #: src/amemstatus.cc:146
 msgid "bytes"
-msgstr ""
+msgstr "bytes"
 
 #: src/amemstatus.cc:170
 msgid "Memory Total: "
-msgstr ""
+msgstr "Hukommelse i alt: "
 
 #: src/amemstatus.cc:171
 msgid "Free: "
-msgstr ""
+msgstr "Ledig: "
 
 #: src/amemstatus.cc:172
 msgid "Cached: "
-msgstr ""
+msgstr "Mellemlagret: "
 
 #: src/amemstatus.cc:173
 msgid "Buffers: "
-msgstr ""
+msgstr "Buffere: "
 
 #: src/amemstatus.cc:174
 msgid "User: "
-msgstr ""
+msgstr "Bruger: "
 
 #: src/apppstatus.cc:196
 #, c-format
@@ -384,11 +384,40 @@ msgid ""
 "%s\n"
 "\n"
 msgstr ""
+"Anvendelse: %s [TILVALG] [ FILNAVN | URL ]\n"
+"\n"
+"IceHelp er en meget simpel HTML-browser til IceWM-vindueshåndteringen.\n"
+"Den kan vise et HTML-dokument fra en fil eller gennemse et websted.\n"
+"Den husker besøgte sider i en historik, som kan navigeres\n"
+"med tastebindinger og en genvejsmenu (højreklik med musen).\n"
+"Den understøtter hverken gengivelse af billeder eller JavaScript.\n"
+"Hvis der ikke angives nogen fil eller URL, så viser den IceWM-manualen\n"
+"fra %s.\n"
+"\n"
+"Tilvalg:\n"
+"  --display=NAVN      NAVN på X-serveren som skal bruges.\n"
+"  --sync              Synkroniser X11-kommandoer.\n"
+"\n"
+"  -b, --bugs          Vis IceWM-fejlrapporter (primitivt).\n"
+"  -f, --faq           Vis IceWM-FAQ og -Howto.\n"
+"  -i, --icewm         Vis IceWM-websted.\n"
+"  -m, --manual        Vis IceWM-manual (standard).\n"
+"  -t, --theme         Vis IceWM-temaers Howto.\n"
+"\n"
+"  -V, --version       Udskriver versionsinformation og afslutter.\n"
+"  -h, --help          Udskriver denne anvendelsesskærm og afslutter.\n"
+"\n"
+"Miljøvariabler:\n"
+"  DISPLAY=NAVN        Navn på X-serveren som skal bruges.\n"
+"\n"
+"Rapportér fejl, supportforespørgsler og kommentarer ved at besøge:\n"
+"%s\n"
+"\n"
 
 #: src/icehelp.cc:2115
-#, fuzzy, c-format
+#, c-format
 msgid "Ignoring option '%s'"
-msgstr "Ukendt tilvalg \"%s\""
+msgstr "Ignorerer tilvalg \"%s\""
 
 #: src/icelist.cc:80
 msgid "List View"
@@ -1275,7 +1304,7 @@ msgstr ""
 
 #: src/wmapp.cc:869
 msgid "Kill IceWM, replace with Xterm"
-msgstr ""
+msgstr "Dræb IceWM, erstat med Xterm"
 
 #: src/wmapp.cc:1433
 msgid ""
@@ -1342,7 +1371,7 @@ msgstr ""
 "Starter IceWM-vindueshåndtering.\n"
 "\n"
 "Tilvalg:\n"
-"  --display=NAVN      NAVN på den X-server som skal bruges.\n"
+"  --display=NAVN      NAVN på X-serveren som skal bruges.\n"
 "%s  --sync              Synkroniser X11-kommandoer.\n"
 "%s\n"
 "  -V, --version       Udskriver versionsinformation og afslutter.\n"
@@ -1838,11 +1867,10 @@ msgid "Ctrl+A"
 msgstr "Ctrl+A"
 
 #: src/ylocale.cc:46
-#, fuzzy
 msgid "Locale not supported by C library or Xlib. Falling back to 'C' locale'."
 msgstr ""
-"Lokalitet understøttes ikke af C-biblioteket. Indlæser standard-\"C-lokalitet"
-"\"."
+"Lokalitet understøttes ikke af C-biblioteket or Xlib. Indlæser "
+"standard-\"C\"-lokalitet."
 
 #: src/ylocale.cc:70
 msgid ""
@@ -1899,17 +1927,5 @@ msgid ""
 "  --display=NAME      NAME of the X server to use.\n"
 "  --sync              Synchronize X11 commands.\n"
 msgstr ""
-"  --display=NAVN      NAVN på den X-server som skal bruges.\n"
+"  --display=NAVN      NAVN på X-serveren som skal bruges.\n"
 "  --sync              Synkroniser X11-kommandoer.\n"
-
-#~ msgid ""
-#~ "Usage: %s FILENAME\n"
-#~ "\n"
-#~ "A very simple HTML browser displaying the document specified by "
-#~ "FILENAME.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "Anvendelse: %s FILNAVN\n"
-#~ "\n"
-#~ "En meget simpel HTML-browser som viser dokumentet angivet med FILNAVN.\n"
-#~ "\n"
