--- a/TODO
+++ b/TODO
@@ -20,7 +20,7 @@
 
 * add support for _NET_WM_HANDLED_ICONS.
 
-* add support for _NET_WM_PING.
+* [DONE] add support for _NET_WM_PING.
 
 * add support for _NET_WM_SYNC_REQUEST and _NET_WM_SYNC_REQUEST_COUNTER.
 
