--- a/po/sk.po
+++ b/po/sk.po
@@ -392,7 +392,7 @@ msgstr ""
 "\n"
 "Voľby:\n"
 "  --display=NÁZOV      NÁZOV X servera, ktorý sa použije.\n"
-"%s  --sync               Synchronizuje príkazy X11.\n"
+"  --sync               Synchronizuje príkazy X11.\n"
 "\n"
 "  -b, --bugs          Zobrazí chybové hlásenia IceWM (primitívne).\n"
 "  -f, --faq           Zobrazí IceWM FAQ a Howto.\n"
